# opgl

./: CMakeLists.txt  README.md  make.bat
src/: CMakeLists.txt  main.cpp
src/math/: CMakeLists.txt  rotation.cpp
src/renderer/: CMakeLists.txt  indexBuffer.cpp  indexBuffer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.cpp  utils.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.h
src/shaders/: basic.glsl
